Twenty Eleven: remove buggy `word-break` property, use `word-wrap` instead, for better hyphenation and word breaking in nested comments. Fixes #22751.
git-svn-id: http://core.svn.wordpress.org/trunk@23060 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -1982,9 +1982,7 @@ section.ephemera .entry-title a span {
 }
 .commentlist .children li.comment .comment-content {
 	margin: 1.625em 0 0;
-	-ms-word-break: break-all;
-	word-break: break-all;
-	word-break: break-word;
+	word-wrap: break-word;
 	-webkit-hyphens: auto;
 	-moz-hyphens: auto;
 	hyphens: auto;
